center align error fixed on about section and aded grey bottom to under 650px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,6 +390,12 @@ a {
     height: 2rem;
     width: 100%;
 }
+
+#grey-bottom-line{
+    background-color: rgba(201, 21, 21, 0);
+    height: 2rem;
+    width: 100%;
+}
 #product-2 {
     grid-area: g;
 }
@@ -471,9 +477,8 @@ a {
 }
 
 #about-grid-container{
-    max-width: 80%;
+    width: 80%;
     margin-left: auto;
-
     margin-right: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -785,6 +790,17 @@ input:hover{
     .shop-button{
         margin-top: 1rem;
     }
+    #grey-top-line{
+        background-color: rgba(0, 0, 0, 0);
+        width: 100%;
+        height: 2rem;
+
+    }
+
+    #grey-bottom-line{
+        background-color: rgba(0, 0, 0, 0.26);
+
+    }
 
     #section-a {
         margin-top: 1rem;
@@ -834,9 +850,10 @@ input:hover{
     }
 
     #about-grid-container{
-        width: 100%;
-        padding: 0;
-        margin: 0;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+
     }
     #section-b{
         border-radius: 0;
